snippets/Nemerle.Statechart/Tests/testsuite/positive/guard_overriden_by_no_guard_level.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  /// <summary>
  /// Description of PathCover.
  /// </summary>
  [statechart(<#

  flags testing;

  name "guard overriden by no guard on several levels";
  
  state D
  {

    a [a1] => C; // W: Transition "TransitionDToCBya" is overriden by \[TransitionAToBBya\], due to execute priority rules, because this transitions is always enabled

    state A
    {
      a       => B;
    }

  }

  state B
  {
  }

  state C // W: State "C" is not used in fsm life history
  {
  }
  #>
  )]
  public class TestFsm
  {
    public a1 : bool {get;set;default true}
  }


module Test
{
  Main() : void
  {
    def fsm = TestFsm();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();

      // "Starting state machine"
    tester.Initiate(["D", "A"]);
     // testing transition overriden by no guard
    tester.Test("a", ["A", "D"], ["B"]);
    fsm.Terminate()
  }
}

/*
BEGIN-OUTPUT
EntryD
EntryA
[A]
Ok
Processing a 'a'
ExitA
ExitD
EntryB
[B]
Ok
END-OUTPUT
*/ 
