snippets/Nemerle.Statechart/Tests/testsuite/negative/simple_conflict_guards.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  /// <summary>
  /// Description of PathCover.
  /// </summary>
  [statechart(<#

  state A
  {
    a [a1] => B; // E: Duplicate transition \"TransitionAToBBya\"
    a [a1] => C; // E: Duplicate transition \"TransitionAToCBya\"
  }

  state B // W: State "B" is not used in fsm life history
  {
  }

  state C // W: State "C" is not used in fsm life history
  {

  }
  #>
  )]
  public class PathCoverFsm
  {

  }


